--- a/params.yaml
+++ b/params.yaml
@@ -1,10 +1,10 @@
 TrainingArguments:
-  num_train_epochs: 1
+  num_train_epochs: 
   warmup_steps: 500
   per_device_train_batch_size: 1
   weight_decay: 0.01
   logging_steps: 10
-  eval_strategy: steps
-  eval_steps: 500
-  save_steps: 1e6
+  evaluation_strategy: steps
+  eval_steps: 300
+  save_steps: 2000
   gradient_accumulation_steps: 16
