--- a/params.yaml
+++ b/params.yaml
@@ -1,10 +1,12 @@
 TrainingArguments:
-  num_train_epochs: 
-  warmup_steps: 500
-  per_device_train_batch_size: 1
+  num_train_epochs: 5
+  warmup_steps: 300
+  per_device_train_batch_size: 2
   weight_decay: 0.01
-  logging_steps: 10
+  logging_steps: 50
   evaluation_strategy: steps
   eval_steps: 300
-  save_steps: 2000
-  gradient_accumulation_steps: 16
+  save_steps: 1000
+  gradient_accumulation_steps: 8
+
+ 
